--- a/comedor/src/main/resources/application.properties
+++ b/comedor/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Desactivar warning del livereload
 spring.devtools.livereload.enabled=false
+
+
+spring.security.user.name=adriel
+spring.security.user.password=admin
+
+
