--- a/comedor/src/main/resources/application.properties
+++ b/comedor/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=comedor
 
 # configuracion del servidor
 server.port=4002
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/comedor?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Argentina/Buenos_Aires
+spring.datasource.url=jdbc:mysql://root:hwxiKfvkoMWRNKYjWCmpxFUALsxirVfQ@turntable.proxy.rlwy.net:23203/railway
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
