--- a/comedor/src/main/resources/application.properties
+++ b/comedor/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=comedor
 
 # configuracion del servidor
 server.port=4002
-spring.datasource.url=jdbc:mysql://root:hwxiKfvkoMWRNKYjWCmpxFUALsxirVfQ@turntable.proxy.rlwy.net:23203/railway
+spring.datasource.url=jdbc:mysql://root:yHeueebSbWIMkFAsrKaaBuUecDnNHPEW@nozomi.proxy.rlwy.net:22578/railway
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # Desactivar warning del livereload
 spring.devtools.livereload.enabled=false
 
-
+#Esto es del swagger
 spring.security.user.name=adriel
 spring.security.user.password=admin
 
