--- a/.github/workflows/main_comedor.yml
+++ b/.github/workflows/main_comedor.yml
@@ -25,13 +25,14 @@ jobs:
           distribution: 'microsoft'
 
       - name: Build with Maven
-        run: mvn clean install
+        working-directory: ./comedor
+        run: mvn -B clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: 'comedor/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
@@ -59,5 +60,5 @@ jobs:
         with:
           app-name: 'comedor'
           slot-name: 'Production'
-          package: '*.jar'
+          package: 'comedor/target/*.jar'
           
