--- a/.github/workflows/main_comedor.yml
+++ b/.github/workflows/main_comedor.yml
@@ -47,6 +47,19 @@ jobs:
         with:
           name: java-app
       
+      - name: Locate JAR
+        id: find-artifact
+        run: |
+          echo "Listing files after download"
+          ls -la
+          JAR=$(find . -type f -name '*.jar' | head -n 1)
+          if [ -z "$JAR" ]; then
+            echo "No jar found!"
+            exit 1
+          fi
+          echo "Found JAR: $JAR"
+          echo "jar=$JAR" >> $GITHUB_OUTPUT
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -60,5 +73,5 @@ jobs:
         with:
           app-name: 'comedor'
           slot-name: 'Production'
-          package: 'comedor/target/*.jar'
+          package: ${{ steps.find-artifact.outputs.jar }}
           
