Se añade generacion de eventos y se prueba con docker

--- a/comedor/src/main/resources/application.properties
+++ b/comedor/src/main/resources/application.properties
@@ -19,6 +19,18 @@ spring.devtools.livereload.enabled=false
 spring.security.user.name=adriel
 spring.security.user.password=admin
 
+# Configuración de RabbitMQ
+# Por defecto, RabbitMQ corre en localhost:5672
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# Configuración opcional pero recomendada
+spring.rabbitmq.connection-timeout=10000
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-returns=true
+
 
 
 
