--- a/comedor/pom.xml
+++ b/comedor/pom.xml
@@ -93,8 +93,12 @@
   <artifactId>spring-boot-starter-webflux</artifactId>
 </dependency>
 
-
-
+		<!-- Azure Blob Storage -->
+		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-storage-blob</artifactId>
+			<version>12.25.1</version>
+		</dependency>
 
 	</dependencies>
 
