se añade el proceso de añadir imagenes al producto#2

--- a/comedor/src/main/resources/application.properties
+++ b/comedor/src/main/resources/application.properties
@@ -19,6 +19,10 @@ spring.devtools.livereload.enabled=false
 spring.security.user.name=adriel
 spring.security.user.password=admin
 
+# Configuración de tamaño máximo de archivos
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 # Configuración de Azure Blob Storage
 azure.storage.connection-string=BlobEndpoint=https://comedorsa.blob.core.windows.net/;QueueEndpoint=https://comedorsa.queue.core.windows.net/;FileEndpoint=https://comedorsa.file.core.windows.net/;TableEndpoint=https://comedorsa.table.core.windows.net/;SharedAccessSignature=sv=2024-11-04&ss=bfqt&srt=sco&sp=rwdlacupiytfx&se=2026-01-01T10:32:18Z&st=2025-11-06T02:17:18Z&sip=0.0.0.0-255.255.255.255&spr=https,http&sig=t9YbA7o9ElGht3AOU2DGbsQqYM0Pimdc6oc%2BK9PHupQ%3D
 azure.storage.container-name=comedorimages
