--- a/comedor/src/main/resources/application.properties
+++ b/comedor/src/main/resources/application.properties
@@ -5,6 +5,11 @@ spring.application.name=comedor
 
 # configuracion del servidor
 server.port=4002
+
+# Configuración de zona horaria para Argentina
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Argentina/Buenos_Aires
+spring.jackson.time-zone=America/Argentina/Buenos_Aires
+
 spring.datasource.url=jdbc:mysql://root:yHeueebSbWIMkFAsrKaaBuUecDnNHPEW@nozomi.proxy.rlwy.net:22578/railway
 spring.datasource.username=root
 spring.datasource.password=admin
