--- a/comedor/src/main/resources/application.properties
+++ b/comedor/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # Configuración de Azure Blob Storage
-azure.storage.connection-string=BlobEndpoint=https://comedorsa.blob.core.windows.net/;QueueEndpoint=https://comedorsa.queue.core.windows.net/;FileEndpoint=https://comedorsa.file.core.windows.net/;TableEndpoint=https://comedorsa.table.core.windows.net/;SharedAccessSignature=sv=2024-11-04&ss=bfqt&srt=sco&sp=rwdlacupiytfx&se=2026-01-01T05:08:18Z&st=2025-11-08T20:53:18Z&sip=0.0.0.0-255.255.255.255&spr=https,http&sig=Pzy%2BYCelEkk8oyD0x9bUEgblu%2BVsTpackgv9fZEqcr8%3D
+azure.storage.connection-string=BlobEndpoint=https://comedorsa.blob.core.windows.net/;QueueEndpoint=https://comedorsa.queue.core.windows.net/;FileEndpoint=https://comedorsa.file.core.windows.net/;TableEndpoint=https://comedorsa.table.core.windows.net/;SharedAccessSignature=sv=2024-11-04&ss=bfqt&srt=sco&sp=rwdlacupiytfx&se=2026-01-01T05:08:18Z&st=2025-11-07T20:53:18Z&sip=0.0.0.0-255.255.255.255&spr=https,http&sig=KueFdDxP0fbZ2k3raiIkClZO5ig7I7GEmfwRnTxMGLU%3D
 azure.storage.container-name=comedorimages
 
 
