--- a/comedor/src/main/resources/application.properties
+++ b/comedor/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=4002
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Argentina/Buenos_Aires
 spring.jackson.time-zone=America/Argentina/Buenos_Aires
 
-spring.datasource.url=jdbc:mysql://root:yHeueebSbWIMkFAsrKaaBuUecDnNHPEW@nozomi.proxy.rlwy.net:22578/railway
+spring.datasource.url=jdbc:mysql://root:ZUxRKjCLZKVaJZGrbXIynabgejGztFkH@switchback.proxy.rlwy.net:47012/railway
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
