--- a/.github/workflows/main_comedorback.yml
+++ b/.github/workflows/main_comedorback.yml
@@ -25,7 +25,8 @@ jobs:
           distribution: 'microsoft'
 
       - name: Build with Maven
-        run: mvn clean install
+        working-directory: ./comedor
+        run: mvn -B clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
