--- a/comedor/src/main/resources/application.properties
+++ b/comedor/src/main/resources/application.properties
@@ -21,10 +21,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # Desactivar warning del livereload
 spring.devtools.livereload.enabled=false
 
-# Swagger
-spring.security.user.name=${SWAGGER_USERNAME}
-spring.security.user.password=${SWAGGER_PASSWORD}
-
 # Configuración de tamaño máximo de archivos
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
@@ -32,6 +28,20 @@ spring.servlet.multipart.max-request-size=10MB
 # Configuración de Azure Blob Storage
 azure.storage.connection-string=${AZURE_STORAGE_CONNECTION_STRING}
 azure.storage.container-name=${AZURE_STORAGE_CONTAINER_NAME}
+
+# RabbitMQ Configuration
+spring.rabbitmq.host=${RABBITMQ_HOST}
+spring.rabbitmq.port=${RABBITMQ_PORT}
+spring.rabbitmq.username=${RABBITMQ_DEFAULT_USER}
+spring.rabbitmq.password=${RABBITMQ_DEFAULT_PASS}
+
+# RabbitMQ Exchange and Queue names
+rabbitmq.exchange.bill=bill.event
+rabbitmq.queue.comedor=comedor.queue
+rabbitmq.exchange.reservation=reservation.event
+
+
+
 
 
 
