--- a/comedor/src/test/resources/application.properties
+++ b/comedor/src/test/resources/application.properties
@@ -10,10 +10,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-# Swagger - valores dummy para tests
-spring.security.user.name=test
-spring.security.user.password=test
-
 # Configuración de Azure Blob Storage - valores dummy para tests
 azure.storage.connection-string=DefaultEndpointsProtocol=https;AccountName=testaccount;AccountKey=dGVzdGtleQ==;EndpointSuffix=core.windows.net
 azure.storage.container-name=test-container
@@ -24,3 +20,14 @@ spring.devtools.livereload.enabled=false
 # Zona horaria
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Argentina/Buenos_Aires
 spring.jackson.time-zone=America/Argentina/Buenos_Aires
+
+# RabbitMQ Configuration (Test) - valores dummy
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# RabbitMQ Exchange and Queue names
+rabbitmq.exchange.bill=bill.event
+rabbitmq.queue.comedor=comedor.queue
+rabbitmq.exchange.reservation=reservation.event
