--- a/comedor/src/main/resources/application.properties
+++ b/comedor/src/main/resources/application.properties
@@ -40,6 +40,10 @@ rabbitmq.exchange.bill=bill.event
 rabbitmq.queue.comedor=comedor.queue
 rabbitmq.exchange.reservation=reservation.event
 
+# JWT Configuration
+jwt.secret=${JWT_SECRET:a-string-secret-at-least-256-bits-long}
+
+
 
 
 
