add CostoReserva Dinamico

--- a/comedor/src/main/resources/application.properties
+++ b/comedor/src/main/resources/application.properties
@@ -43,6 +43,10 @@ rabbitmq.exchange.reservation=reservation.event
 # JWT Configuration
 jwt.secret=${JWT_SECRET:a-string-secret-at-least-256-bits-long}
 
+# External API - Backoffice Parametros
+external.api.backoffice.url=https://backoffice-production-df78.up.railway.app/api/v1/parametros
+external.api.backoffice.parametro.coste-reserva=Coste Reserva
+
 
 
 
