add Sedes Dinamico y fix para nube#3

--- a/comedor/src/test/resources/application.properties
+++ b/comedor/src/test/resources/application.properties
@@ -31,3 +31,7 @@ spring.rabbitmq.password=guest
 rabbitmq.exchange.bill=bill.event
 rabbitmq.queue.comedor=comedor.queue
 rabbitmq.exchange.reservation=reservation.event
+
+# External API Configuration - URL dummy para tests
+external.api.backoffice.url=http://localhost:8080
+external.api.backoffice.parametro.coste-reserva=Coste Reserva
