--- a/comedor/src/main/resources/application.properties
+++ b/comedor/src/main/resources/application.properties
@@ -43,6 +43,10 @@ rabbitmq.exchange.reservation=reservation.event
 # JWT Configuration
 jwt.secret=${JWT_SECRET:a-string-secret-at-least-256-bits-long}
 
+# Wallet API Configuration
+wallet.api.url=https://jtseq9puk0.execute-api.us-east-1.amazonaws.com
+wallet.system.account=SYSTEM
+
 
 
 
