--- a/comedor/src/test/resources/application.properties
+++ b/comedor/src/test/resources/application.properties
@@ -31,3 +31,7 @@ spring.rabbitmq.password=guest
 rabbitmq.exchange.bill=bill.event
 rabbitmq.queue.comedor=comedor.queue
 rabbitmq.exchange.reservation=reservation.event
+
+# Wallet API Configuration - dummy para tests
+wallet.api.url=http://localhost:8080
+wallet.system.account=SYSTEM
