--- a/comedor/src/test/resources/application.properties
+++ b/comedor/src/test/resources/application.properties
@@ -32,6 +32,6 @@ rabbitmq.exchange.bill=bill.event
 rabbitmq.queue.comedor=comedor.queue
 rabbitmq.exchange.reservation=reservation.event
 
-# External API Configuration - URL dummy para tests
-external.api.backoffice.url=http://localhost:8080
-external.api.backoffice.parametro.coste-reserva=Coste Reserva
+# Wallet API Configuration - dummy para tests
+wallet.api.url=http://localhost:8080
+wallet.system.account=SYSTEM
