Add missing backoffice properties to test configuration

--- a/comedor/src/test/resources/application.properties
+++ b/comedor/src/test/resources/application.properties
@@ -35,3 +35,7 @@ rabbitmq.exchange.reservation=reservation.event
 # Wallet API Configuration - dummy para tests
 wallet.api.url=http://localhost:8080
 wallet.system.account=SYSTEM
+
+# External API Configuration - Backoffice
+external.api.backoffice.url=https://backoffice-production-df78.up.railway.app/api/v1/
+external.api.backoffice.parametro.coste-reserva=35814d0d-692c-4b68-b524-068414560b6b
